[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Monster/monster_eyes.png" type="Texture" id=1]
[ext_resource path="res://assets/Monster/monster_torso.png" type="Texture" id=2]
[ext_resource path="res://assets/Monster/smoke.shader" type="Shader" id=3]
[ext_resource path="res://assets/Monster/smoke.png" type="Texture" id=4]
[ext_resource path="res://src/Scripts/Monster.gd" type="Script" id=5]
[ext_resource path="res://assets/Music/heartbeat.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/Music/horror_tension.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/Evidence/orbs.png" type="Texture" id=8]
[ext_resource path="res://assets/Evidence/scream.mp3" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/center = Vector2( 0.5, 0.8 )
shader_param/OCTAVES = 8

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="CircleShape2D" id=3]
radius = 2.80316

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.700153 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 353.54
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 12.12
scale = 0.5
scale_curve = SubResource( 9 )

[node name="Monster" type="KinematicBody2D" groups=["Monster"]]
position = Vector2( 512, 300 )
z_index = 1000
collision/safe_margin = 15.0
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 300.0 ],
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="Monster_body" type="CollisionPolygon2D" parent="."]
position = Vector2( -6.10352e-05, -1 )
scale = Vector2( -1.70956, -1.68359 )
polygon = PoolVector2Array( 4.13306, 2.43661, -4.13312, 2.43661, -2.06659, -4.8732, 2.06653, -4.8732 )
disabled = true

[node name="Smoke" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -0.298889, 13.7004 )
scale = Vector2( 2.1875, 1.58594 )
texture = ExtResource( 4 )
offset = Vector2( 0, -15 )

[node name="MonsterTorso" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -0.298889, 15.3254 )
scale = Vector2( 1.83594, 2.03125 )
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )

[node name="MonsterEyes" type="Sprite" parent="."]
light_mask = 15
material = SubResource( 4 )
position = Vector2( -0.298889, 7.70044 )
scale = Vector2( 1, 0.882812 )
texture = ExtResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 20.0
target_desired_distance = 20.0
path_max_distance = 60.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="Vision" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0.999939, -1 )
rotation = 3.14159
scale = Vector2( 34.8667, 17.1686 )
z_index = -1
polygon = PoolVector2Array( -3.90057, -5.9411, -3.01148, 4.7179, -7.42129, 29.6877, 7.44825, 29.7868, 3.41299, 4.60144, 3.95794, -6.23229 )

[node name="Vision_ray" type="RayCast2D" parent="."]
position = Vector2( -0.298889, -0.299561 )
enabled = true
cast_to = Vector2( 0, 0 )
collide_with_areas = true

[node name="heartbeat_player" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.298889, -0.299561 )
stream = ExtResource( 6 )
pitch_scale = 0.9

[node name="horror_tension_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.9
max_distance = 300.0

[node name="Vision_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Death_box" type="Area2D" parent="."]
collision_layer = 2

[node name="death_shape" type="CollisionShape2D" parent="Death_box"]
position = Vector2( 0.999939, -1 )
rotation = 3.14159
scale = Vector2( 10.8403, 9.93153 )
z_index = -1
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
amount = 1000
lifetime = 2.5
explosiveness = 1.0
fixed_fps = 30
visibility_rect = Rect2( -500, -500, 1000, 1000 )
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="screech_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
max_distance = 500.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Vision_timer" to="." method="_on_Vision_timer_timeout"]
[connection signal="body_entered" from="Death_box" to="." method="_on_Death_box_body_entered"]
